--- a/index.html
+++ b/index.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
-<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coming Soon</title>
-    <style>
-        body, html {
-            height: 100%;
-            margin: 0;
-            font-family: 'Courier New', Courier, monospace;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #000;
-            color: white;
-            text-align: center;
-        }
-
-        h1 {
-            font-size: 3em;
-            margin: 0;
-            letter-spacing: 0.1em;
-        }
-    </style>
+    <title>Platinum Properties Landscaping</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div>
-    <h1>Coming Soon</h1>
-</div>
+    <header>
+        <h1>Platinum Properties Landscaping</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="pricing.html">Pricing</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="hero">
+            <h2>Your Partner in Creating Stunning Outdoor Spaces</h2>
+        </section>
+        <section class="services">
+            <h3>Our Services</h3>
+            <p>Lawn Care, Garden Design, Hardscaping, Seasonal Cleanup</p>
+        </section>
+    </main>
+    <footer>
+        <p>Follow us on:</p>
+        <p>&copy; 2024 Platinum Properties Landscaping</p>
+    </footer>
 </body>
 </html>
