--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
-        <h1>Platinum Properties Landscaping</h1>
+        <div class="logo">
+            <img src="images/logo.png" alt="Platinum Properties Landscaping">
+        </div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -20,16 +22,38 @@
     </header>
     <main>
         <section class="hero">
-            <h2>Your Partner in Creating Stunning Outdoor Spaces</h2>
+            <img src="images/hero.jpg" alt="Beautiful Landscape">
+            <div class="hero-text">
+                <h1>Transform Your Outdoor Space</h1>
+                <p>Expert Landscaping Services for Your Home or Business</p>
+                <a href="contact.html" class="btn">Get a Quote</a>
+            </div>
         </section>
         <section class="services">
-            <h3>Our Services</h3>
-            <p>Lawn Care, Garden Design, Hardscaping, Seasonal Cleanup</p>
+            <h2>Our Services</h2>
+            <div class="service">
+                <img src="images/service1.jpg" alt="Lawn Care">
+                <h3>Lawn Care</h3>
+                <p>Professional lawn care services to keep your lawn green and healthy.</p>
+            </div>
+            <div class="service">
+                <img src="images/service2.jpg" alt="Garden Design">
+                <h3>Garden Design</h3>
+                <p>Creative garden designs that bring beauty and functionality to your outdoor space.</p>
+            </div>
+            <div class="service">
+                <img src="images/service3.jpg" alt="Hardscaping">
+                <h3>Hardscaping</h3>
+                <p>Durable and attractive hardscaping solutions for patios, walkways, and more.</p>
+            </div>
         </section>
     </main>
     <footer>
-        <p>Follow us on:</p>
-        <p>&copy; 2024 Platinum Properties Landscaping</p>
+        <p>&copy; 2024 Platinum Properties Landscaping. Follow us on:</p>
+        <div class="social-links">
+            <!-- Social Media Links -->
+        </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
