--- a/about.html
+++ b/about.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
-        <h1>Platinum Properties Landscaping</h1>
+        <div class="logo">
+            <img src="images/logo.png" alt="Platinum Properties Landscaping">
+        </div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -20,13 +22,16 @@
     </header>
     <main>
         <section class="about">
-            <h2>About Platinum Properties Landscaping</h2>
+            <h2>About Us</h2>
             <p>Platinum Properties Landscaping was founded with the goal of transforming ordinary outdoor spaces into extraordinary landscapes. Our team of experienced professionals is dedicated to providing top-quality landscaping services, ensuring that every project we undertake meets our high standards of excellence.</p>
         </section>
     </main>
     <footer>
-        <p>Follow us on:</p>
-        <p>&copy; 2024 Platinum Properties Landscaping</p>
+        <p>&copy; 2024 Platinum Properties Landscaping. Follow us on:</p>
+        <div class="social-links">
+            <!-- Social Media Links -->
+        </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
