--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
-        <h1>Platinum Properties Landscaping</h1>
+        <div class="logo">
+            <img src="images/logo.png" alt="Platinum Properties Landscaping">
+        </div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -38,8 +40,11 @@
         </section>
     </main>
     <footer>
-        <p>Follow us on:</p>
-        <p>&copy; 2024 Platinum Properties Landscaping</p>
+        <p>&copy; 2024 Platinum Properties Landscaping. Follow us on:</p>
+        <div class="social-links">
+            <!-- Social Media Links -->
+        </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
