--- a/index.html
+++ b/index.html
@@ -1,59 +1,33 @@
 <!DOCTYPE html>
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Platinum Properties Landscaping</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Coming Soon</title>
+    <style>
+        body, html {
+            height: 100%;
+            margin: 0;
+            font-family: 'Courier New', Courier, monospace;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #000;
+            color: white;
+            text-align: center;
+        }
+
+        h1 {
+            font-size: 3em;
+            margin: 0;
+            letter-spacing: 0.1em;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <img src="images/logo.png" alt="Platinum Properties Landscaping">
-        </div>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="pricing.html">Pricing</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section class="hero">
-            <img src="images/hero.jpg" alt="Beautiful Landscape">
-            <div class="hero-text">
-                <h1>Transform Your Outdoor Space</h1>
-                <p>Expert Landscaping Services for Your Home or Business</p>
-                <a href="contact.html" class="btn">Get a Quote</a>
-            </div>
-        </section>
-        <section class="services">
-            <h2>Our Services</h2>
-            <div class="service">
-                <img src="images/service1.jpg" alt="Lawn Care">
-                <h3>Lawn Care</h3>
-                <p>Professional lawn care services to keep your lawn green and healthy.</p>
-            </div>
-            <div class="service">
-                <img src="images/service2.jpg" alt="Garden Design">
-                <h3>Garden Design</h3>
-                <p>Creative garden designs that bring beauty and functionality to your outdoor space.</p>
-            </div>
-            <div class="service">
-                <img src="images/service3.jpg" alt="Hardscaping">
-                <h3>Hardscaping</h3>
-                <p>Durable and attractive hardscaping solutions for patios, walkways, and more.</p>
-            </div>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2024 Platinum Properties Landscaping. Follow us on:</p>
-        <div class="social-links">
-            <!-- Social Media Links -->
-        </div>
-    </footer>
-    <script src="script.js"></script>
+<div>
+    <h1>Coming Soon</h1>
+</div>
 </body>
 </html>
