--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,8 @@
 
         <div class="col-lg-6" data-aos="fade-up" data-aos-delay="250">
 
-          <form action="contact.php" method="post" role="form" class="php-email-form">
+          <form action="https://api.web3forms.com/submit" method="POST" id="contactForm" class="php-email-form">
+            <input type="hidden" name="access_key" value="bdbbc04b-9a60-4d71-90de-838bd764c270">
             <div class="row">
               <div class="col-md-6 form-group">
                 <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -116,9 +117,6 @@
               <div class="col-md-6 form-group mt-3 mt-md-0">
                 <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
               </div>
-            </div>
-            <div class="form-group mt-3">
-              <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
             </div>
             <div class="form-group mt-3">
               <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
