--- a/index.html
+++ b/index.html
@@ -170,51 +170,46 @@
   <!-- ======= Our Services Section ======= -->
   <section id="services-list" class="services-list">
     <div class="container" data-aos="fade-up">
-
       <div class="section-header">
         <h2>Our Services</h2>
-
       </div>
-
-      <div class="row gy-5">
-
-        <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
+      <div class="row justify-content-center gy-5">
+        <div class="col-lg-6 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
           <div class="icon flex-shrink-0"><i class="bi bi-briefcase" style="color: #f57813;"></i></div>
           <div>
             <h4 class="title"><a href="#" class="stretched-link">Lawn Care</a></h4>
+            <p class="description">Starting at $25</p>
             <p class="description">Comprehensive lawn care services to keep your lawn healthy and green. Our services include mowing, edge trimming, weed control, and more.</p>
           </div>
-        </div>
-        <!-- End Service Item -->
-
-        <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
+        </div><!-- End Service Item -->
+        <div class="col-lg-6 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
           <div class="icon flex-shrink-0"><i class="bi bi-card-checklist" style="color: #15a04a;"></i></div>
           <div>
             <h4 class="title"><a href="#" class="stretched-link">Power Washing</a></h4>
+            <p class="description">Starting at $35</p>
             <p class="description">Restore the cleanliness and appearance of your outdoor surfaces with our power washing services. Ideal for driveways, patios, decks, and more.</p>
           </div>
         </div><!-- End Service Item -->
-
-        <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
+        <div class="col-lg-6 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
           <div class="icon flex-shrink-0"><i class="bi bi-bar-chart" style="color: #d90769;"></i></div>
           <div>
             <h4 class="title"><a href="#" class="stretched-link">Seasonal Packages</a></h4>
+            <p class="description">Starting at $80 / month</p>
             <p class="description">Keep your property looking its best all season with our seasonal packages. Services include clean-ups, power-washing, and more.</p>
           </div>
         </div><!-- End Service Item -->
-
-        <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
+        <div class="col-lg-6 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
           <div class="icon flex-shrink-0"><i class="bi bi-binoculars" style="color: #15bfbc;"></i></div>
           <div>
             <h4 class="title"><a href="#" class="stretched-link">Landscape Design</a></h4>
-            <p class="description">Transform your outdoor space with our  landscape design services. We create beautiful, functional landscapes that enhance your property's curb appeal.</p>
+            <p class="description">Starting at $40</p>
+            <p class="description">Transform your outdoor space with our landscape design services. We create beautiful, functional landscapes that enhance your property's curb appeal.</p>
           </div>
         </div><!-- End Service Item -->
-
       </div>
-
     </div>
   </section><!-- End Our Services Section -->
+
 
   <!-- ======= Call To Action Section ======= -->
   <section id="call-to-action" class="call-to-action">
